feat: simplificar interfaz movil

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/icon-ios-180x180.png" />
     
     <!-- Preload critical resources -->
-    <link rel="preload" href="/manifest.webmanifest" crossorigin="use-credentials" />
+    <link rel="manifest" href="/manifest.webmanifest" crossorigin="use-credentials" />
 
     <!-- Open Graph -->
     <meta property="og:title" content="sPark - Estacionamiento Inteligente" />
